// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Mandibular Class I bilateral DE 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal-extension abutments (Kennedy I/II) (Retainers PDF p. 16, 35). Rest mesial + Proximal plate distal (covers ≥1/3 of distal surface) + I-bar engaging 0.01" mid-buccal undercut. Vertical-projection I-bar rotates AWAY from abutment under occlusal load → stress-release.",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating opposite the retentive arm (Lecture 5 reciprocation p. 4). When retentive arm engages buccal undercut, plating on lingual/palatal surface counteracts the buccal-pull force during insertion — prevents tooth torquing.",
        "text": "Distal proximal plate contacting 1/2–2/3 of the occluso-gingival height of the abutment's distal proximal surface (UIC house rule, between Kratochvil and Krol) + lingual plating for reciprocation",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "2.5-3 mm M-D × 2/3 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut at the greatest curvature of the buccal surface (mesial-buccal aspect)",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 20,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal-extension abutments (Kennedy I/II) (Retainers PDF p. 16, 35). Rest mesial + Proximal plate distal (covers ≥1/3 of distal surface) + I-bar engaging 0.01" mid-buccal undercut. Vertical-projection I-bar rotates AWAY from abutment under occlusal load → stress-release.",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating opposite the retentive arm (Lecture 5 reciprocation p. 4). When retentive arm engages buccal undercut, plating on lingual/palatal surface counteracts the buccal-pull force during insertion — prevents tooth torquing.",
        "text": "Distal proximal plate contacting 1/2–2/3 of the occluso-gingival height of the abutment's distal proximal surface (UIC house rule, between Kratochvil and Krol) + lingual plating for reciprocation",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "2.5-3 mm M-D × 2/3 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut at the greatest curvature of the buccal surface (mesial-buccal aspect)",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 29,
    },
  ],
  "axiumCode": "D5214",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        18,
        19,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        30,
        31,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks (UIC default per Final Impressions p. 18). Cobalt-chromium alloy; 0.5-1.0 mm major connector thickness; excellent rigidity-to-weight ratio; biocompatible; predictable casting; standard at UIC unless allergy.",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (Lecture 5 p. 8-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II.",
      "restType": "mesial occlusal rest",
      "tier": "strong",
      "tooth": 28,
    },
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (Lecture 5 p. 8-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II.",
      "restType": "mesial occlusal rest",
      "tier": "strong",
      "tooth": 21,
    },
  ],
  "kennedy": {
    "class": "I",
    "deSide": null,
    "description": "Kennedy Class I",
    "modSpans": [],
    "modifications": 0,
    "primarySpans": [
      {
        "afterBound": 20,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": null,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          30,
          31,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 20,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": null,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          30,
          31,
        ],
        "type": "distal-extension",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for mandibular RPD.

Major connector: Lingual Bar.

* Exact undercuts to engage are marked in red. *

#20: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.
#21: Mesial rest.
#28: Mesial rest.
#29: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.

#18-19: Open lattice with distal tissue stop.
#30-31: Open lattice with distal tissue stop.

Lingual bar: superior border ≥3 mm below gingival margins of remaining mandibular teeth (UIC spec). Inferior border at functional vestibular depth (do not impinge on lingual frenum). Half-pear cross-section, 4 mm vertical height minimum.
Lingual sulcus depth requirement: ≥8 mm (verify clinically before approving design).
Framework metal thickness: 0.5-1.0 mm Co-Cr at major connector.
Relief: 0.5 mm relief over the genial tubercles, mylohyoid ridge, and external oblique ridge (mandatory per UIC).

Cast clasp arm position: terminal 1/3 in undercut (0.01" engagement); middle 1/3 at survey line; origin 1/3 rigid above survey line. Clasp tip in gingival 1/3 of clinical crown — NOT on gingival margin.

Denture tooth mold (anterior): [Trubyte Classic — TBD at wax-rim try-in based on intercanine distance + high-smile line].
Denture tooth mold (posterior): [Trubyte Classic posterior, e.g. F30 10° — TBD at wax-rim try-in].
Tooth shade: [TBD chairside via Vita shade guide — matched to existing natural teeth].
Acrylic gingival shade: [TBD via UIC gingival shade guide — typically L199-OR or 50% OR + 50% DK mix].

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "Lingual Plate",
    "alternativeRationale": "Lingual Plate is indicated if the patient has mandibular tori or if lingual sulcus depth is <8mm. Selected Lingual Bar here because sulcus is adequate and no tori.",
    "rationale": "Major connector of choice when sufficient lingual sulcus space exists (≥8 mm from gingival margin to floor of mouth) (Lecture 6 p. 13). Half-pear cross-section, 4 mm vertical height, superior border ≥3 mm below gingival margins. Minimal tissue coverage, easiest for patient to adapt to.",
    "tier": "common",
    "type": "Lingual Bar",
    "width": "4mm + 4mm clearance from gingival margin",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class I (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Class I/II distal extension: altered cast technique MAY be needed at framework try-in. UIC default is single-step PVS. Indication for altered cast: (a) disclosing-wax try-in shows the framework seats differently on the master cast vs intraorally, OR (b) the distal-extension ridge tissue is visibly flabby/compressible. If indicated: heat framework saddle, add Triad spacer, border-mold the saddle, light-body PVS impression — press on REST SEATS ONLY, never on the distal extension framework. Lab sections the master cast and pours new distal extensions.",
      "severity": "info",
      "type": "altered-cast",
    },
  ],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Mandibular Class II Mod 1 (Design Case I lower) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly when RPI is contraindicated (vestibular depth <5 mm, undercut location mid-mesial/MB/DB) (Retainers PDF p. 20). Cast rest + 18ga wrought-wire C-clasp arm engaging 0.02" undercut; wrought wire flexes more than cast metal under stress. (soft tissue undercut >1mm at 4–5mm below the buccal gingival margin)",
      "claspTier": "strong",
      "claspType": "Combination",
      "contraindications": [
        {
          "key": "soft-tissue-undercut",
          "text": "soft tissue undercut >1mm at 4–5mm below the buccal gingival margin",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm (Lecture 5 reciprocation p. 5). Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "2.5-3 mm M-D × 2/3 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "18ga wrought wire retentive arm engaging 0.02" mesio-buccal undercut",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 21,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Cast circumferential clasp of choice for tooth-supported abutments (Kennedy III/IV) (Retainers PDF p. 14). Engages 0.01" buccal undercut on mesial half of tooth; rigid until terminal third where it flexes into undercut. Reciprocation by opposite-arch plating or cast lingual arm. NOT for distal extension (causes Class I torquing).",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm (Lecture 5 reciprocation p. 5). Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "2.5-3 mm M-D × 2/3 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "distal",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" mesio-buccal undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 29,
    },
    {
      "claspAlternative": "Ring clasp",
      "claspAlternativeRationale": "Ring clasp is UIC's typical choice for a tilted molar with a distal undercut: ~360° encirclement with primary mesial occlusal rest + distal auxiliary rest + supportive strut. Reverse Akers on a molar is off-label per the Retainers lecture scope (bicuspids/cuspids only).",
      "claspAlternatives": null,
      "claspRationale": "Used when ONLY a mesial/lingual undercut is available on a bicuspid or cuspid (NEVER molar — aspiration risk per Retainers PDF p. 27). Cast clasp originates from the distal aspect of the tooth and wraps to engage a mesio-lingual undercut. Tier-downgraded for molars (use Combination or Embrasure instead). (retentive arm engages disto-lingual undercut) — NOTE: UIC restricts Reverse Akers to bicuspids and cuspids; this tooth is outside that indication scope. Consider Ring clasp instead for a tilted molar with distal undercut.",
      "claspTier": "judgment",
      "claspType": "Reverse Akers",
      "contraindications": [
        {
          "key": "undercut-location",
          "text": "usable undercut not at mid-buccal/mesio-buccal (disto-lingual)",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "disto-lingual",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm (Lecture 5 reciprocation p. 5). Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast buccal reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#8 round (outline) / #6 round (axial inclination) / #4 round (refinement)",
        "dimensions": "2.5-3 mm M-D × 1/3-1/2 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "Cast retentive arm engaging 0.01" disto-lingual undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 31,
    },
  ],
  "axiumCode": "D5214",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        18,
        19,
        20,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        30,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks (UIC default per Final Impressions p. 18). Cobalt-chromium alloy; 0.5-1.0 mm major connector thickness; excellent rigidity-to-weight ratio; biocompatible; predictable casting; standard at UIC unless allergy.",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": "Engine places indirect retainer on the opposite side from the distal extension. The textbook clinical rule is geometric — perpendicular to the fulcrum line at its midpoint, on the side opposite the saddle. For most Class II cases these give the same answer, but in some configurations (Class II Mod 1 with diagonal fulcrum line) in practice the indirect is sometimes placed on the SAME side as the DE but at a perpendicular position to the fulcrum. In practice, instructors may also reuse an existing rest-only abutment (max anterior with ball/cingulum rest) as the dual-role indirect retainer rather than adding a separate one.",
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (Lecture 5 p. 8-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II.",
      "restType": "mesial occlusal rest",
      "tier": "common",
      "tooth": 28,
    },
  ],
  "kennedy": {
    "class": "II",
    "deSide": "left",
    "description": "Kennedy Class II Modification 1",
    "modSpans": [
      {
        "afterBound": 31,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          30,
        ],
        "type": "tooth-supported",
      },
    ],
    "modifications": 1,
    "primarySpans": [
      {
        "afterBound": 21,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
          20,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 21,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          18,
          19,
          20,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": 31,
        "beforeBound": 29,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          30,
        ],
        "type": "tooth-supported",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for mandibular RPD.

Major connector: Lingual Bar.

* Exact undercuts to engage are marked in red. *

#21: Distal proximal plate, Mesial rest, Combination clasp engaging 0.02" MB undercut, Lingual reciprocal plate.
#28: Mesial rest.
#29: Distal proximal plate, Distal rest, Akers clasp engaging 0.01" MB undercut, Lingual reciprocal clasp.
#31: Mesial proximal plate, Mesial rest, Akers clasp engaging 0.01" DL undercut, Buccal reciprocal clasp.

#18-20: Open lattice with distal tissue stop.
#30: Open lattice.

Lingual bar: superior border ≥3 mm below gingival margins of remaining mandibular teeth (UIC spec). Inferior border at functional vestibular depth (do not impinge on lingual frenum). Half-pear cross-section, 4 mm vertical height minimum.
Lingual sulcus depth requirement: ≥8 mm (verify clinically before approving design).
Framework metal thickness: 0.5-1.0 mm Co-Cr at major connector.
Relief: 0.5 mm relief over the genial tubercles, mylohyoid ridge, and external oblique ridge (mandatory per UIC).

Cast clasp arm position: terminal 1/3 in undercut (0.01" engagement); middle 1/3 at survey line; origin 1/3 rigid above survey line. Clasp tip in gingival 1/3 of clinical crown — NOT on gingival margin.

Denture tooth mold (anterior): [Trubyte Classic — TBD at wax-rim try-in based on intercanine distance + high-smile line].
Denture tooth mold (posterior): [Trubyte Classic posterior, e.g. F30 10° — TBD at wax-rim try-in].
Tooth shade: [TBD chairside via Vita shade guide — matched to existing natural teeth].
Acrylic gingival shade: [TBD via UIC gingival shade guide — typically L199-OR or 50% OR + 50% DK mix].

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "Lingual Plate",
    "alternativeRationale": "Lingual Plate is indicated if the patient has mandibular tori or if lingual sulcus depth is <8mm. Selected Lingual Bar here because sulcus is adequate and no tori.",
    "rationale": "Major connector of choice when sufficient lingual sulcus space exists (≥8 mm from gingival margin to floor of mouth) (Lecture 6 p. 13). Half-pear cross-section, 4 mm vertical height, superior border ≥3 mm below gingival margins. Minimal tissue coverage, easiest for patient to adapt to.",
    "tier": "common",
    "type": "Lingual Bar",
    "width": "4mm + 4mm clearance from gingival margin",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class II (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Class I/II distal extension: altered cast technique MAY be needed at framework try-in. UIC default is single-step PVS. Indication for altered cast: (a) disclosing-wax try-in shows the framework seats differently on the master cast vs intraorally, OR (b) the distal-extension ridge tissue is visibly flabby/compressible. If indicated: heat framework saddle, add Triad spacer, border-mold the saddle, light-body PVS impression — press on REST SEATS ONLY, never on the distal extension framework. Lab sections the master cast and pours new distal extensions.",
      "severity": "info",
      "type": "altered-cast",
    },
  ],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Mandibular Class III single tooth (#19) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Cast circumferential clasp of choice for tooth-supported abutments (Kennedy III/IV) (Retainers PDF p. 14). Engages 0.01" buccal undercut on mesial half of tooth; rigid until terminal third where it flexes into undercut. Reciprocation by opposite-arch plating or cast lingual arm. NOT for distal extension (causes Class I torquing).",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "disto-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm (Lecture 5 reciprocation p. 5). Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#8 round (outline) / #6 round (axial inclination) / #4 round (refinement)",
        "dimensions": "2.5-3 mm M-D × 1/3-1/2 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" disto-buccal undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 18,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Cast circumferential clasp of choice for tooth-supported abutments (Kennedy III/IV) (Retainers PDF p. 14). Engages 0.01" buccal undercut on mesial half of tooth; rigid until terminal third where it flexes into undercut. Reciprocation by opposite-arch plating or cast lingual arm. NOT for distal extension (causes Class I torquing).",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm (Lecture 5 reciprocation p. 5). Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "2.5-3 mm M-D × 2/3 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "distal",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" mesio-buccal undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 20,
    },
  ],
  "axiumCode": "D5214",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        19,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks (UIC default per Final Impressions p. 18). Cobalt-chromium alloy; 0.5-1.0 mm major connector thickness; excellent rigidity-to-weight ratio; biocompatible; predictable casting; standard at UIC unless allergy.",
    "requiresApproval": false,
  },
  "indirectRetainers": [],
  "kennedy": {
    "class": "III",
    "deSide": null,
    "description": "Kennedy Class III",
    "modSpans": [],
    "modifications": 0,
    "primarySpans": [
      {
        "afterBound": 20,
        "beforeBound": 18,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          19,
        ],
        "type": "tooth-supported",
      },
    ],
    "spans": [
      {
        "afterBound": 20,
        "beforeBound": 18,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          19,
        ],
        "type": "tooth-supported",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for mandibular RPD.

Major connector: Lingual Bar.

* Exact undercuts to engage are marked in red. *

#18: Mesial proximal plate, Mesial rest, Akers clasp engaging 0.01" DB undercut, Lingual reciprocal clasp.
#20: Distal proximal plate, Distal rest, Akers clasp engaging 0.01" MB undercut, Lingual reciprocal clasp.

#19: Open lattice.

Lingual bar: superior border ≥3 mm below gingival margins of remaining mandibular teeth (UIC spec). Inferior border at functional vestibular depth (do not impinge on lingual frenum). Half-pear cross-section, 4 mm vertical height minimum.
Lingual sulcus depth requirement: ≥8 mm (verify clinically before approving design).
Framework metal thickness: 0.5-1.0 mm Co-Cr at major connector.
Relief: 0.5 mm relief over the genial tubercles, mylohyoid ridge, and external oblique ridge (mandatory per UIC).

Cast clasp arm position: terminal 1/3 in undercut (0.01" engagement); middle 1/3 at survey line; origin 1/3 rigid above survey line. Clasp tip in gingival 1/3 of clinical crown — NOT on gingival margin.

Denture tooth mold (anterior): [Trubyte Classic — TBD at wax-rim try-in based on intercanine distance + high-smile line].
Denture tooth mold (posterior): [Trubyte Classic posterior, e.g. F30 10° — TBD at wax-rim try-in].
Tooth shade: [TBD chairside via Vita shade guide — matched to existing natural teeth].
Acrylic gingival shade: [TBD via UIC gingival shade guide — typically L199-OR or 50% OR + 50% DK mix].

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "Lingual Plate",
    "alternativeRationale": "Lingual Plate is indicated if the patient has mandibular tori or if lingual sulcus depth is <8mm. Selected Lingual Bar here because sulcus is adequate and no tori.",
    "rationale": "Major connector of choice when sufficient lingual sulcus space exists (≥8 mm from gingival margin to floor of mouth) (Lecture 6 p. 13). Half-pear cross-section, 4 mm vertical height, superior border ≥3 mm below gingival margins. Minimal tissue coverage, easiest for patient to adapt to.",
    "tier": "common",
    "type": "Lingual Bar",
    "width": "4mm + 4mm clearance from gingival margin",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "I",
        "rationale": "Kennedy Class III, ≤3 teeth missing — tooth-supported in single sextant.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class I — appropriate for predoctoral / general dentistry care.",
    "class": "I",
    "classNum": 1,
    "drivers": [
      "location",
      "abutment condition",
      "occlusion",
      "residual ridge",
    ],
  },
  "redFlags": [
    {
      "message": "Nesbit (unilateral cantilever) RPD is PROHIBITED at UIC College of Dentistry per Final RPD Huddle 2 answer key — aspiration risk if dislodged. For this short unilateral edentulous space, the engine recommends a fixed solution (FPD or implants). If the patient declines fixed treatment, an Interim Partial Denture with non-metal clasps is the only acceptable removable option (Summer 2023 Interim RPD lecture: indicated for Class III / short-span IV).",
      "severity": "info",
      "type": "nesbit-prohibition",
    },
  ],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Maxillary Class II Mod 3 (Design Case I) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Cast circumferential clasp of choice for tooth-supported abutments (Kennedy III/IV) (Retainers PDF p. 14). Engages 0.01" buccal undercut on mesial half of tooth; rigid until terminal third where it flexes into undercut. Reciprocation by opposite-arch plating or cast lingual arm. NOT for distal extension (causes Class I torquing).",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [
        {
          "key": "vestibular",
          "text": "vestibular depth ≤5mm",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "disto-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm (Lecture 5 reciprocation p. 5). Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#8 round (outline) / #6 round (axial inclination) / #4 round (refinement)",
        "dimensions": "2.5-3 mm M-D × 1/3-1/2 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" disto-buccal undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 2,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Cast circumferential clasp of choice for tooth-supported abutments (Kennedy III/IV) (Retainers PDF p. 14). Engages 0.01" buccal undercut on mesial half of tooth; rigid until terminal third where it flexes into undercut. Reciprocation by opposite-arch plating or cast lingual arm. NOT for distal extension (causes Class I torquing).",
      "claspTier": "strong",
      "claspType": "Akers",
      "contraindications": [
        {
          "key": "vestibular",
          "text": "vestibular depth ≤5mm",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": false,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm (Lecture 5 reciprocation p. 5). Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "2.5-3 mm M-D × 2/3 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "distal",
        "type": "occlusal",
      },
      "retentiveArm": "Cast circumferential retentive arm engaging 0.01" mesio-buccal undercut",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 4,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Provides secondary retention via frictional contact along extended parallel surface (Lecture 4A p. 13). Used when primary undercut retention is marginal — the long parallel surface adds resistance to dislodgement during chewing.",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment (Lecture 4A p. 16). Used when a single rest would overload a periodontally compromised tooth; spreading load across multiple rests reduces per-tooth force.",
      "restSeat": {
        "bur": "inverted cone",
        "dimensions": "V-shaped (teardrop) depression on cingulum; 1.5 mm deep × 2.5 mm M-D × 2 mm I-G; perpendicular to long axis of tooth",
        "surface": "distal",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 6,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Provides secondary retention via frictional contact along extended parallel surface (Lecture 4A p. 13). Used when primary undercut retention is marginal — the long parallel surface adds resistance to dislodgement during chewing.",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment (Lecture 4A p. 16). Used when a single rest would overload a periodontally compromised tooth; spreading load across multiple rests reduces per-tooth force.",
      "restSeat": {
        "bur": "inverted cone",
        "dimensions": "1.5 mm diameter hemispherical depression on distal line angle of central incisor lingual surface",
        "surface": "mesial",
        "type": "ball",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 9,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Provides secondary retention via frictional contact along extended parallel surface (Lecture 4A p. 13). Used when primary undercut retention is marginal — the long parallel surface adds resistance to dislodgement during chewing.",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment (Lecture 4A p. 16). Used when a single rest would overload a periodontally compromised tooth; spreading load across multiple rests reduces per-tooth force.",
      "restSeat": {
        "bur": "inverted cone",
        "dimensions": "V-shaped (teardrop) depression on cingulum; 1.5 mm deep × 2.5 mm M-D × 2 mm I-G; perpendicular to long axis of tooth",
        "surface": "mesial",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 11,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly when RPI is contraindicated (vestibular depth <5 mm, undercut location mid-mesial/MB/DB) (Retainers PDF p. 20). Cast rest + 18ga wrought-wire C-clasp arm engaging 0.02" undercut; wrought wire flexes more than cast metal under stress. (vestibular depth ≤5mm)",
      "claspTier": "strong",
      "claspType": "Combination",
      "contraindications": [
        {
          "key": "vestibular",
          "text": "vestibular depth ≤5mm",
        },
        {
          "key": "frenum",
          "text": "high frenum in I-bar approach path",
        },
      ],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mesio-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Cast lingual/buccal reciprocal arm opposing the retentive arm (Lecture 5 reciprocation p. 5). Used when major connector does not contact the abutment surface opposite the retentive arm; the arm provides the counter-force at the survey line.",
        "text": "Cast lingual reciprocal arm",
        "type": "arm",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "2.5-3 mm M-D × 2/3 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "18ga wrought wire retentive arm engaging 0.02" mesio-buccal undercut",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 12,
    },
  ],
  "axiumCode": "D5213",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        3,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        5,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        7,
        8,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        10,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        13,
        14,
        15,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks (UIC default per Final Impressions p. 18). Cobalt-chromium alloy; 0.5-1.0 mm major connector thickness; excellent rigidity-to-weight ratio; biocompatible; predictable casting; standard at UIC unless allergy.",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": "Engine places indirect retainer on the opposite side from the distal extension. The textbook clinical rule is geometric — perpendicular to the fulcrum line at its midpoint, on the side opposite the saddle. For most Class II cases these give the same answer, but in some configurations (Class II Mod 1 with diagonal fulcrum line) in practice the indirect is sometimes placed on the SAME side as the DE but at a perpendicular position to the fulcrum. In practice, instructors may also reuse an existing rest-only abutment (max anterior with ball/cingulum rest) as the dual-role indirect retainer rather than adding a separate one.",
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (Lecture 5 p. 8-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II.",
      "restType": "mesial cingulum rest",
      "tier": "common",
      "tooth": 6,
    },
  ],
  "kennedy": {
    "class": "II",
    "deSide": "left",
    "description": "Kennedy Class II Modification 4",
    "modSpans": [
      {
        "afterBound": 4,
        "beforeBound": 2,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          3,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 9,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 9,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          10,
        ],
        "type": "tooth-supported",
      },
    ],
    "modifications": 4,
    "primarySpans": [
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 4,
        "beforeBound": 2,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          3,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 9,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 9,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          10,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for maxillary RPD.

Major connector: A-P Strap with 0.5mm beading on the tissue side.

* Exact undercuts to engage are marked in red. *

#2: Mesial proximal plate, Mesial rest, Akers clasp engaging 0.01" DB undercut, Palatal reciprocal clasp.
#4: Distal proximal plate, Distal rest, Akers clasp engaging 0.01" MB undercut, Palatal reciprocal clasp.
#6: Distal proximal plate, Cingulum rest.
#9: Mesial proximal plate, Mesial ball rest.
#11: Mesial proximal plate, Cingulum rest.
#12: Distal proximal plate, Mesial rest, Combination clasp engaging 0.02" MB undercut, Palatal reciprocal plate.

#3: Open lattice.
#5: Open lattice.
#7-8: Open lattice.
#10: Open lattice.
#13-15: Open lattice with distal tissue stop.

Relief: 0.5 mm relief over the incisive papilla and median palatal raphe (mandatory per UIC).
Anterior strap: 6 mm posterior to gingival margins of anterior teeth, 8 mm wide.
Posterior strap: 6 mm anterior to vibrating line, 6-8 mm wide.
Lateral straps: ≥4 mm wide; cross the palate at oblique angle for tongue comfort.
Framework metal thickness: 0.5-1.0 mm Co-Cr at major connector; smooth, polished tongue-facing surface.

Cast clasp arm position: terminal 1/3 in undercut (0.01" engagement); middle 1/3 at survey line; origin 1/3 rigid above survey line. Clasp tip in gingival 1/3 of clinical crown — NOT on gingival margin.

Denture tooth mold (anterior): [Trubyte Classic — TBD at wax-rim try-in based on intercanine distance + high-smile line].
Denture tooth mold (posterior): [Trubyte Classic posterior, e.g. F30 10° — TBD at wax-rim try-in].
Tooth shade: [TBD chairside via Vita shade guide — matched to existing natural teeth].
Acrylic gingival shade: [TBD via UIC gingival shade guide — typically L199-OR or 50% OR + 50% DK mix].

Please return for try-in. Thank you.",
  "majorConnector": {
    "note": "0.5mm beading on tissue side",
    "rationale": "Rigid major connector of choice for Maxillary Kennedy Class I and II (Lecture 6 p. 8). Two transverse straps (8 mm anterior, 6-8 mm posterior) connected laterally provide cross-arch rigidity essential for distal extension support.",
    "tier": "strong",
    "type": "A-P Strap",
    "width": "8mm each strap, 6mm gingival clearance",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class II (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Class I/II distal extension: altered cast technique MAY be needed at framework try-in. UIC default is single-step PVS. Indication for altered cast: (a) disclosing-wax try-in shows the framework seats differently on the master cast vs intraorally, OR (b) the distal-extension ridge tissue is visibly flabby/compressible. If indicated: heat framework saddle, add Triad spacer, border-mold the saddle, light-body PVS impression — press on REST SEATS ONLY, never on the distal extension framework. Lab sections the master cast and pours new distal extensions.",
      "severity": "info",
      "type": "altered-cast",
    },
    {
      "message": "Anterior edentulous area present (#7, #8, #10). UIC Lecture 2 hard rule: "Always close the anterior edentulous area." Replacement options (in order of preference): FPD (if abutments allow), implant-supported crown(s), RPD with appropriate base design (Mesh for ≥3 anterior teeth, Facing for extremely limited vertical space + non-resorbed ridge), or IPD with denture teeth bonded to acrylic base if transitional. Leaving the gap open is never an acceptable definitive outcome.",
      "severity": "info",
      "type": "always-close-anterior",
    },
    {
      "message": "Vestibular depth ≤5mm: I-bar approach is contraindicated arch-wide. RPI assemblies have been switched to Combination Clasp.",
      "severity": "info",
      "type": "vestibular-depth",
    },
  ],
}
`;

exports[`SNAPSHOTS — full engine output for canonical cases > snapshot: Maxillary few teeth (Full Palate case) 1`] = `
{
  "abutmentDesigns": [
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal-extension abutments (Kennedy I/II) (Retainers PDF p. 16, 35). Rest mesial + Proximal plate distal (covers ≥1/3 of distal surface) + I-bar engaging 0.01" mid-buccal undercut. Vertical-projection I-bar rotates AWAY from abutment under occlusal load → stress-release.",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating opposite the retentive arm (Lecture 5 reciprocation p. 4). When retentive arm engages buccal undercut, plating on lingual/palatal surface counteracts the buccal-pull force during insertion — prevents tooth torquing.",
        "text": "Distal proximal plate contacting 1/2–2/3 of the occluso-gingival height of the abutment's distal proximal surface (UIC house rule, between Kratochvil and Krol) + lingual plating for reciprocation",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "2.5-3 mm M-D × 2/3 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut at the greatest curvature of the buccal surface (mesial-buccal aspect)",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 4,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "distal",
      },
      "guidePlaneRationale": "Provides secondary retention via frictional contact along extended parallel surface (Lecture 4A p. 13). Used when primary undercut retention is marginal — the long parallel surface adds resistance to dislodgement during chewing.",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment (Lecture 4A p. 16). Used when a single rest would overload a periodontally compromised tooth; spreading load across multiple rests reduces per-tooth force.",
      "restSeat": {
        "bur": "inverted cone",
        "dimensions": "V-shaped (teardrop) depression on cingulum; 1.5 mm deep × 2.5 mm M-D × 2 mm I-G; perpendicular to long axis of tooth",
        "surface": "distal",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "spanType": "tooth-supported",
      "surveyCrown": null,
      "tooth": 6,
    },
    {
      "claspAlternative": "I-bar (esthetic)",
      "claspAlternativeRationale": "Worked clinical cases sometimes use I-bar esthetic on a max-anterior abutment that's terminal to a posterior tooth-bounded gap (LabRx Case A example: #6 terminal to #4-5 gap → I-bar esthetic). Consider I-bar esthetic if the case has only 2-3 retentive clasps and additional anterior retention is needed.",
      "claspRationale": "For esthetic reasons, no clasp designed on maxillary anterior; long/parallel guide plane provides secondary retention",
      "claspTier": "judgment",
      "claspType": "Rest Only (no clasp)",
      "contraindications": [],
      "crownLengthening": null,
      "guidePlane": {
        "length": "long/parallel (full clinical crown height)",
        "surface": "mesial",
      },
      "guidePlaneRationale": "Provides secondary retention via frictional contact along extended parallel surface (Lecture 4A p. 13). Used when primary undercut retention is marginal — the long parallel surface adds resistance to dislodgement during chewing.",
      "isPrimaryAbutment": false,
      "reciprocation": null,
      "restRationale": "Additional rest to distribute occlusal forces away from compromised abutment (Lecture 4A p. 16). Used when a single rest would overload a periodontally compromised tooth; spreading load across multiple rests reduces per-tooth force.",
      "restSeat": {
        "bur": "inverted cone",
        "dimensions": "V-shaped (teardrop) depression on cingulum; 1.5 mm deep × 2.5 mm M-D × 2 mm I-G; perpendicular to long axis of tooth",
        "surface": "mesial",
        "type": "cingulum",
      },
      "retentiveArm": "None — major connector contact provides bracing",
      "spanType": "anterior",
      "surveyCrown": null,
      "tooth": 11,
    },
    {
      "claspAlternative": null,
      "claspAlternativeRationale": null,
      "claspAlternatives": null,
      "claspRationale": "Stress-releasing clasp assembly of choice for distal-extension abutments (Kennedy I/II) (Retainers PDF p. 16, 35). Rest mesial + Proximal plate distal (covers ≥1/3 of distal surface) + I-bar engaging 0.01" mid-buccal undercut. Vertical-projection I-bar rotates AWAY from abutment under occlusal load → stress-release.",
      "claspTier": "strong",
      "claspType": "RPI",
      "contraindications": [],
      "crownLengthening": null,
      "effectiveUndercutLocation": "mid-buccal",
      "guidePlane": {
        "length": "2/3 clinical crown height, 1/3 BL width",
        "surface": "distal",
      },
      "guidePlaneRationale": "Establishes path of insertion (Lecture 4A p. 12). Cylindrical diamond bur prep on proximal surface of abutment adjacent to edentulous span; parallel to other guide planes in the arch; 2-3 mm occluso-gingival height, full B-L width.",
      "isPrimaryAbutment": true,
      "reciprocation": {
        "rationale": "Reciprocation provided by the major connector plating opposite the retentive arm (Lecture 5 reciprocation p. 4). When retentive arm engages buccal undercut, plating on lingual/palatal surface counteracts the buccal-pull force during insertion — prevents tooth torquing.",
        "text": "Distal proximal plate contacting 1/2–2/3 of the occluso-gingival height of the abutment's distal proximal surface (UIC house rule, between Kratochvil and Krol) + lingual plating for reciprocation",
        "type": "plate",
      },
      "restRationale": null,
      "restSeat": {
        "bur": "#6 round (outline) / #4 round (axial inclination)",
        "dimensions": "2.5-3 mm M-D × 2/3 B-L × 1.5 mm deep; spoon-shaped; 20° axial inclination toward tooth center; marginal ridge reduced 0.5-1 mm at rest margin",
        "surface": "mesial",
        "type": "occlusal",
      },
      "retentiveArm": "I-bar engaging 0.01" mid-buccal undercut at the greatest curvature of the buccal surface (mesial-buccal aspect)",
      "spanType": "distal-extension",
      "surveyCrown": null,
      "tooth": 12,
    },
  ],
  "axiumCode": "D5213",
  "baseDesigns": [
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        2,
        3,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": undefined,
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        5,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
    {
      "alternative": "Open Lattice",
      "alternativeRationale": "Mesh is the preferred choice for anterior spans ≥3 teeth (esthetic-bulk preference reduces acrylic bulk in the visible zone). Open Lattice is also acceptable and provides slightly more acrylic retention.",
      "note": undefined,
      "rationale": "Used where there is limited inter-occlusal space (Denture Base Considerations p. 13). Fine metal mesh provides acrylic retention with thinner profile than Open Lattice. Preferred for anterior spans ≥3 teeth (esthetic-bulk reduction).",
      "spanTeeth": [
        7,
        8,
        9,
        10,
      ],
      "tier": "common",
      "type": "Mesh",
    },
    {
      "alternative": null,
      "alternativeRationale": null,
      "note": "Distal tissue stop required",
      "rationale": "Replace tooth and tissue; provides maximum acrylic retention (Denture Base Considerations p. 12). Cast metal grid pattern with through-holes for acrylic; standard for distal extensions and most tooth-supported spans ≥2 teeth. Required carrier for distal tissue stops.",
      "spanTeeth": [
        13,
        14,
        15,
      ],
      "tier": "strong",
      "type": "Open Lattice",
    },
  ],
  "designIntent": "definitive",
  "framework": {
    "material": "Co-Cr",
    "rationale": "Standard favorable choice for RPD frameworks (UIC default per Final Impressions p. 18). Cobalt-chromium alloy; 0.5-1.0 mm major connector thickness; excellent rigidity-to-weight ratio; biocompatible; predictable casting; standard at UIC unless allergy.",
    "requiresApproval": false,
  },
  "indirectRetainers": [
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (Lecture 5 p. 8-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II.",
      "restType": "mesial cingulum rest",
      "tier": "strong",
      "tooth": 6,
    },
    {
      "alternativeRationale": null,
      "rationale": "Indirect retainer placed perpendicular to the fulcrum line, as far from the axis of rotation as possible, to resist up-lifting of the distal extension base when masticatory forces displace the saddle apically (Lecture 5 p. 8-10). Standard locations: max canines for Class I/II, mand canines or first premolars for mand Class I/II.",
      "restType": "mesial cingulum rest",
      "tier": "strong",
      "tooth": 11,
    },
  ],
  "kennedy": {
    "class": "I",
    "deSide": null,
    "description": "Kennedy Class I Modification 2",
    "modSpans": [
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": true,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
          9,
          10,
        ],
        "type": "anterior",
      },
    ],
    "modifications": 2,
    "primarySpans": [
      {
        "afterBound": 4,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          2,
          3,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
    "spans": [
      {
        "afterBound": 4,
        "beforeBound": null,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": true,
        "teeth": [
          2,
          3,
        ],
        "type": "distal-extension",
      },
      {
        "afterBound": 6,
        "beforeBound": 4,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          5,
        ],
        "type": "tooth-supported",
      },
      {
        "afterBound": 11,
        "beforeBound": 6,
        "containsAnterior": true,
        "containsPosterior": false,
        "crossesMidline": true,
        "isDistalExtensionLeft": false,
        "isDistalExtensionRight": false,
        "teeth": [
          7,
          8,
          9,
          10,
        ],
        "type": "anterior",
      },
      {
        "afterBound": null,
        "beforeBound": 12,
        "containsAnterior": false,
        "containsPosterior": true,
        "crossesMidline": false,
        "isDistalExtensionLeft": true,
        "isDistalExtensionRight": false,
        "teeth": [
          13,
          14,
          15,
        ],
        "type": "distal-extension",
      },
    ],
  },
  "labScript": "Please fabricate Co-Cr metal framework for maxillary RPD.

Major connector: Full Palatal Plate with 0.5mm beading on the tissue side.

* Exact undercuts to engage are marked in red. *

#4: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.
#6: Distal proximal plate, Cingulum rest.
#11: Mesial proximal plate, Cingulum rest.
#12: Distal proximal plate, Mesial rest, I-bar engaging 0.01" mid-buccal undercut.

#2-3: Open lattice with distal tissue stop.
#5: Open lattice.
#7-10: Mesh.
#13-15: Open lattice with distal tissue stop.

Relief: 0.5 mm relief over the incisive papilla and median palatal raphe (mandatory per UIC).
Posterior boundary: AT the vibrating line (junction of hard and soft palate); confirm with T-burnisher or 'ah' line marking.
Anterior boundary: extends to lingual surfaces of anterior teeth (NOT covering gingival margin — finish on tooth surface above gingival third).
Framework metal thickness: 0.5-1.0 mm Co-Cr at major connector; smooth, polished tongue-facing surface.

Cast clasp arm position: terminal 1/3 in undercut (0.01" engagement); middle 1/3 at survey line; origin 1/3 rigid above survey line. Clasp tip in gingival 1/3 of clinical crown — NOT on gingival margin.

Denture tooth mold (anterior): [Trubyte Classic — TBD at wax-rim try-in based on intercanine distance + high-smile line].
Denture tooth mold (posterior): [Trubyte Classic posterior, e.g. F30 10° — TBD at wax-rim try-in].
Tooth shade: [TBD chairside via Vita shade guide — matched to existing natural teeth].
Acrylic gingival shade: [TBD via UIC gingival shade guide — typically L199-OR or 50% OR + 50% DK mix].

Please return for try-in. Thank you.",
  "majorConnector": {
    "alternative": "A-P Strap",
    "alternativeRationale": "The cutoff between A-P Strap and Full Palatal Plate ("few teeth remain") is qualitative in the curriculum. Engine uses ≤4 abutments OR severe resorption as the threshold based on Design Case II (4 abutments → Full Palate) vs Design Case I (6 abutments → A-P Strap). Some instructors may prefer A-P Strap with 4 abutments if the tooth distribution is favorable.",
    "note": "0.5mm beading on tissue side",
    "rationale": "Connector of choice when few abutments remain (≤4 abutments, typically distributed) (Lecture 6 p. 11). Maximum stability + retention via broad palatal coverage; posterior border AT vibrating line. Rigid plate; not for severe gag reflex patients.",
    "tier": "judgment",
    "type": "Full Palatal Plate",
  },
  "pdi": {
    "breakdown": {
      "abutmentCondition": {
        "class": "I",
        "rationale": "All bounding abutments have good periodontal prognosis — no preprosthetic therapy required on abutments.",
      },
      "location": {
        "class": "III",
        "rationale": "Kennedy Class I (distal extension) — substantially compromised; requires tooth-tissue support.",
      },
      "occlusion": {
        "class": "I",
        "rationale": "Angle Class I occlusion assumed; no VDO change anticipated.",
      },
      "residualRidge": {
        "class": "I",
        "rationale": "Mild ridge resorption — adequate residual ridge support.",
      },
    },
    "careRecommendation": "PDI Class III — substantially complex; consider postgraduate prosthodontic input.",
    "class": "III",
    "classNum": 3,
    "drivers": [
      "location",
    ],
  },
  "redFlags": [
    {
      "message": "Class I/II distal extension: altered cast technique MAY be needed at framework try-in. UIC default is single-step PVS. Indication for altered cast: (a) disclosing-wax try-in shows the framework seats differently on the master cast vs intraorally, OR (b) the distal-extension ridge tissue is visibly flabby/compressible. If indicated: heat framework saddle, add Triad spacer, border-mold the saddle, light-body PVS impression — press on REST SEATS ONLY, never on the distal extension framework. Lab sections the master cast and pours new distal extensions.",
      "severity": "info",
      "type": "altered-cast",
    },
    {
      "message": "Anterior edentulous area present (#7, #8, #9, #10). UIC Lecture 2 hard rule: "Always close the anterior edentulous area." Replacement options (in order of preference): FPD (if abutments allow), implant-supported crown(s), RPD with appropriate base design (Mesh for ≥3 anterior teeth, Facing for extremely limited vertical space + non-resorbed ridge), or IPD with denture teeth bonded to acrylic base if transitional. Leaving the gap open is never an acceptable definitive outcome.",
      "severity": "info",
      "type": "always-close-anterior",
    },
  ],
}
`;
